...

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">
            <Button
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/save_note" />
            <Button
                android:id="@+id/deleteBtn"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delete Note" />
        </LinearLayout>

...
